--- a/hdfs/datanode.yaml
+++ b/hdfs/datanode.yaml
@@ -31,6 +31,8 @@ spec:
           env:
             - name: HADOOP_CONF_DIR
               value: /home/hadoop/conf
+            - name: HADOOP_ROOT_LOGGER
+              value: INFO,DRFA,console
           command:
             - hdfs
             - datanode
@@ -50,6 +52,8 @@ spec:
                 path: core-site.xml
               - key: slaves
                 path: slaves
+              - key: log4j.properties
+                path: log4j.properties
   volumeClaimTemplates:
     - metadata:
         name: datanode-data
