Remove useless configuration files

--- a/hdfs/journalnode.yaml
+++ b/hdfs/journalnode.yaml
@@ -29,8 +29,6 @@ spec:
           image: hdfs:latest
           imagePullPolicy: Never
           env:
-            - name: HADOOP_CONF_DIR
-              value: /home/hadoop/conf
             - name: HADOOP_ROOT_LOGGER
               value: INFO,DRFA,console
           command:
@@ -38,22 +36,17 @@ spec:
             - journalnode
           volumeMounts:
             - name: hdfs-conf
-              mountPath: /home/hadoop/conf
+              mountPath: /home/hadoop/hadoop-current/etc/hadoop/hdfs-site.xml
+              subPath: hdfs-site.xml
+            - name: hdfs-conf
+              mountPath: /home/hadoop/hadoop-current/etc/hadoop/core-site.xml
+              subPath: core-site.xml
             - name: journalnode-data
               mountPath: /data
       volumes:
         - name: hdfs-conf
           configMap:
             name: hdfs-conf
-            items:
-              - key: hdfs-site.xml
-                path: hdfs-site.xml
-              - key: core-site.xml
-                path: core-site.xml
-              - key: slaves
-                path: slaves
-              - key: log4j.properties
-                path: log4j.properties
   volumeClaimTemplates:
     - metadata:
         name: journalnode-data
